# sentinel

./: .gitignore  README.md  pyproject.toml
contrib/systemd/: README.md  install.sh  sentinel@.service
docs/: initialization.md  parallel-optimization.md
examples/: keri_analyzer.py
examples/configs/: README.md  sentinel-healthkeri.conf  sentinel-local.conf
scripts/: example-local.sh
src/sentinel/app/: sentineling.py  startup.py
src/sentinel/app/cli/: sentinel.py
src/sentinel/app/cli/commands/: start.py  up.py
src/sentinel/app/cli/commands/watcher/: add.py
src/sentinel/core/: authing.py  credentialing.py  eventing.py  filing.py  initializing.py  oobiing.py  querying.py  remoting.py  watching.py  witnessing.py
src/sentinel/db/: basing.py
src/sentinel/framework/: basing.py  connecting.py  events.py  runner.py  watching.py
tests/framework/: test_watching.py
tests/sentinel/app/: test_sentineling.py
tests/sentinel/core/: test_authing.py  test_credentialing.py  test_eventing.py  test_initializing.py  test_remoting.py  test_watching.py
tests/sentinel/db/: test_basing.py
