# $ python setup.py register sdist upload

# First Time register project on pypi
# https://pypi.org/manage/projects/
#
#
# Pypi Release
# $ pip3 install twine
#
# $ python3 -m build
# $ twine upload dist/*

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.0.1"
description = "KERI local watcher using the healthKERI Watcher Network or direct witness querying."
readme = "README.md"
requires-python = ">=3.13.3"
authors = [
    {name = "Phil Feairheller", email = "phil@healthKERI.com"}
]

dependencies = [
    "keri~=1.3.5",
    "kept @git+https://git@github.com/healthKERI/kept.git@main",
    "multicommand>=1.0.0",
    'cbor>=1.0.0',
    'httpx>=0.28.1',
    "requests>=2.32.4",
    'requests_toolbelt==1.0.0',
    'pyotp>=2.10.0'
]

[dependency-groups]
dev = [
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/healthKERI/sentinel"

[project.scripts]
sentinel = "sentinel.app.cli.sentinel:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src", "."]

